<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/message_send" />
        <item
            android:id="@+id/nav_message_sent"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/message_sent" />
        <item
            android:id="@+id/nav_message_outbox"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/message_outbox" />
        <item
            android:id="@+id/nav_message_draft"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/message_draft" />

    <item android:title="Preferences">
        <menu>
            <item
                android:id="@+id/nav_message_contacts"
                android:icon="@drawable/account_box"
                android:title="@string/message_contacts" />
            <item
                android:id="@+id/nav_message_settings"
                android:icon="@drawable/settings"
                android:title="@string/message_settings" />

        </menu>
    </item>

    </group>
    <item android:title="Ratings">
        <menu>

            <item
                android:id="@+id/nav_message_rate"
                android:icon="@android:drawable/ic_media_pause"
                android:title="@string/message_rate" />
        </menu>
    </item>

</menu>
