<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <AutoCompleteTextView
        android:id="@+id/actvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/loan_name"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/add_loan_text_color"
        android:textColorHint="@color/add_loan_hint_color"
        android:textSize="16sp"/>
    <AutoCompleteTextView
        android:id="@+id/actvNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/loan_number"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/add_loan_text_color"
        android:textColorHint="@color/add_loan_hint_color"
        android:textSize="16sp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <AutoCompleteTextView
        android:id="@+id/actvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/loan_amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/add_loan_text_color"
        android:textColorHint="@color/add_loan_hint_color"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/actvDateTaken"
            style="@style/heading_text_style"
            />

        <AutoCompleteTextView
            android:id="@+id/actvDatePromised"
            style="@style/ACVStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@android:drawable/ic_menu_camera"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/loan_date_promised"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/add_loan_text_color"
            android:textColorHint="@color/add_loan_hint_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />


    <Spinner
        android:id="@+id/spLoanType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <AutoCompleteTextView
        android:id="@+id/actvRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/loan_remarks"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/add_loan_text_color"
        android:textColorHint="@color/add_loan_hint_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbSetReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/loan_set_reminder"
            android:textColor="@color/add_loan_text_color"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/flSetReminder"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />



    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="3dp"
        android:text="@string/loan_add"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />

    


</LinearLayout>